tests/NormalTests/paczka1/small_fuzzy/82994083.err
Error in line 3: I6nC1CCO S361 99,3
Error in line 8: A377 S361 45,2
Error in line 7: I6nC1CCO A529 17,1
Error in line 6: FzHRXJFIk S288 88,9
